# web-api-template

./: .gitignore  Dockerfile  Dockerfile.lambda  Dockerfile.mysql  README.aws-commands.md  README.azure.md  README.dynamodb.md  README.google.md  README.md  alembic.ini  alembic.ini.mysql  docker-compose-db.yaml  docker-compose-localstack.yaml  docker-compose.yaml  otel-config.yml  prometheus.yml  pyproject.toml  pytest.ini  template.yaml
.github/workflows/: github-actions-cicd.yml  main.yml  main_lambda.yml
alembic/: env.py
alembic/versions/: 1953ae5a140b_create_test_permissions_data.py  553ba4edc9ce_create_test_data.py  5b4b80397e51_permissions_model.py  c266645c98b8_added_currency_field_to_policies.py  cc8e6fbfe8d7_initial_migration.py  da31cc8c410c_added_concurrency_control_fields.py  dfd56f85dfaf_initial_migration.py
docs/diagrams/: architecture-diagrams.drawio
scripts/: create_environments.sh
src/web_api_template/: application.py  di.py  exception_handlers.py  lambda_main.py  lifespan.py  main.py  routes.py
src/web_api_template/api/healthcheck/: api_healthcheck.py  router_healthcheck.py
src/web_api_template/core/: cors.py  di_injector.py  logging.py  selective_cache.py  settings.py
src/web_api_template/core/api/: __init__.py  api_message.py  common_query_model.py  pagination_query_model.py  problem_detail.py  sorting_query_model.py  utils.py  validation_error_detail.py
src/web_api_template/core/auth/: __init__.py  auth_middleware.py  cognito_client.py  functions.py  group_checker.py  jwt_auth_middleware.py  jwt_auth_provider.py  jwt_bearer.py  jwt_bearer_manager.py  jwt_bearer_manager_protocol.py  permission_checker.py  permissions_read_service.py  settings.py  types.py  user.py  utils.py
src/web_api_template/core/middleware/: __init__.py  trace_id_middleware.py
src/web_api_template/domain/aggregates/: __init__.py  policy.py  policy_base.py  policy_create.py  policy_filter.py
src/web_api_template/domain/entities/: __init__.py  address.py  address_base.py  address_create.py  address_filter.py  building.py  building_base.py  content.py  content_base.py  content_create.py  content_filter.py  person.py  person_base.py  person_create.py  person_filter.py  policy.py  policy_base.py  policy_create.py  policy_filter.py
src/web_api_template/domain/exceptions/: __init__.py  address_not_found_exception.py  content_not_found_exception.py  person_already_exists_exception.py  person_already_modified_exception.py  (+4 more)
src/web_api_template/repository/: utils.py
tests/APItesting/: bruno.json
tests/APItesting/Addresses/: Create.bru  Get List.bru  Get by Id.bru
tests/APItesting/Persons/: Create.bru  Get List.bru  Get by Id.bru  Update.bru
tests/APItesting/Policies/: Create.bru  Get List.bru  Get by Id.bru
tests/APItesting/_Auth/: Get Hosted UI.bru  Get Token (authorization code).bru  Get Token (clien credentials).bru  Get Token (client credentials).bru
tests/APItesting/environments/: Development.bru
(+151 files in other folders)
