[tool.poetry]
name = "web-api-template"
version = "0.1.0"
description = ""
authors = ["impalah <impalah@gmail.com>"]
readme = "README.md"
packages = [{include = "web_api_template", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.105.0"
SQLAlchemy = {extras = ["async"], version = "^2.0.23"}
uvicorn = "^0.24.0.post1"
asyncpg = "^0.29.0"
python-dotenv = "^1.0.0"
greenlet = "^3.0.3"
py-automapper = "^1.2.3"
svix-ksuid = "^0.6.2"
redis = "^5.0.1"
colorlog = "^6.8.0"
boto3 = "^1.34.17"
celery = {extras = ["dynamodb", "sqs"], version = "^5.3.6"}
pynamodb = "^6.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
requests = "^2.31.0"
pydantic = {extras = ["email"], version = "^2.5.3"}
pydilite = "^0.1.0"
mangum = "^0.17.0"
auth-middleware = "^0.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-mock = "^3.12.0"
pytest-asyncio = "^0.23.3"
mock = "^5.1.0"
pytest-cov = "^4.1.0"
black = "^23.12.1"
httpx = "^0.26.0"
pytest-env = "^1.1.3"
mypy = "^1.8.0"
jupyter = "^1.0.0"
py-spy = "^0.3.14"
types-requests = "^2.31.0.20240311"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
