[tool.poetry]
name = "web-api-template"
version = "0.1.0"
description = ""
authors = ["impalah <impalah@gmail.com>"]
readme = "README.md"
packages = [{include = "web_api_template", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.105.0"
SQLAlchemy = {extras = ["asyncio"], version = "^2.0.35"}
uvicorn = "^0.24.0.post1"
asyncpg = "^0.29.0"
python-dotenv = "^1.0.0"
greenlet = "^3.0.3"
svix-ksuid = "^0.6.2"
redis = "^5.0.1"
boto3 = "^1.34.17"
pynamodb = "^6.0.0"
pydantic = {extras = ["email"], version = "^2.5.3"}
pydilite = "^0.1.0"
mangum = "^0.17.0"
auth-middleware = "^0.1.17"
loguru = "^0.7.2"
transaction-middleware = "^0.1.7"
advanced-automapper = "^0.1.6"
alembic = "^1.13.3"
psycopg2 = "^2.9.9"
nest-asyncio = "^1.6.0"
aiocache = "^0.12.3"
opentelemetry-api = "^1.27.0"
opentelemetry-sdk = "^1.27.0"
opentelemetry-instrumentation = "^0.48b0"
opentelemetry-exporter-otlp = "^1.27.0"
opentelemetry-instrumentation-fastapi = "^0.48b0"
mysqlclient = "^2.2.4"
aiomysql = "^0.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-mock = "^3.12.0"
pytest-asyncio = "^0.23.3"
mock = "^5.1.0"
pytest-cov = "^4.1.0"
black = "^23.12.1"
httpx = "^0.26.0"
pytest-env = "^1.1.3"
mypy = "^1.8.0"
jupyter = "^1.0.0"
py-spy = "^0.3.14"
types-requests = "^2.31.0.20240311"
faker = "^30.0.0"
flake8 = "^7.1.1"
flake8-bugbear = "^24.8.19"
flake8-annotations = "^3.1.1"
autoflake = "^2.3.1"
pytest-timeout = "^2.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
files = ["src/"]  # Source code folder
ignore_missing_imports = false
strict = true
disallow_untyped_defs = false

